chore: add git-commit-msg-linter

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/vitorjobs/clean_node_api/issues"
   },
-  "homepage": "https://github.com/vitorjobs/clean_node_api#readme"
+  "homepage": "https://github.com/vitorjobs/clean_node_api#readme",
+  "devDependencies": {
+    "git-commit-msg-linter": "^4.1.2"
+  }
 }
