--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/vitorjobs/clean_node_api#readme",
   "devDependencies": {
-    "git-commit-msg-linter": "^4.1.2"
+    "@types/node": "^17.0.27",
+    "git-commit-msg-linter": "^4.1.2",
+    "typescript": "^4.6.3"
   }
 }
