--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-   "autDir": "./dist",
+    "outDir": "./dist",
     "target": "es2019", 
     "module": "commonjs",                                /* Specify what module code is generated. */   
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
