--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/vitorjobs/clean_node_api#readme",
   "devDependencies": {
+    "@types/jest": "^28.1.3",
     "@types/node": "^17.0.27",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "eslint": "^7.32.0",
@@ -27,7 +28,9 @@
     "eslint-plugin-promise": "^5.2.0",
     "git-commit-msg-linter": "^4.1.2",
     "husky": "^8.0.1",
+    "jest": "^28.1.2",
     "lint-staged": "^13.0.3",
+    "ts-jest": "^28.0.5",
     "typescript": "^4.7.4"
   }
 }
